Fixed spacing issue

--- a/src/styles/projectpage.css
+++ b/src/styles/projectpage.css
@@ -13,6 +13,7 @@
     align-items: center;
     flex-direction: column;
     height: 400px;
+    text-align: center;
 }
 
 .project-title {
